# mogus

./: README.md  errors.py  game_stuff.py  keep_alive.py  main.py  pegasus.py  pyproject.toml  utils.py
cogs/: boiz.py  errors.py  fun.py  game.py  grade.py  gym.py  handling.py  mod.py  mystics.py  owner.py  test.py  utility.py
cogs/under work/: game.py
